src/styles.css
/*General styles*/
html{height: 100%; width: 100%; margin: 0; padding: 0;}
body{margin: 0px; font-family: 'Work Sans', sans-serif; overscroll-behavior-y: contain; height: 100%; width: 100%; margin: 0; padding: 0;}
  .hidden{display:none !important;}
  ::-webkit-scrollbar {width: 0px;}

#appRoot{height: 100%; position: relative;}
  .contentView{position: absolute; width: 100%;height: 100%; display: flex; flex-direction: column; flex-shrink: 0; background: #E8EAEE;}
    .header{font-size: 1.5em;padding: 10px 8px 10px 8px; background: #4D77BE; display: flex; justify-content: space-between; min-height: 30px;}
      .header img{align-self: center;}
      .miniLoading{position: absolute; left: 50%; transform: translateX(-50%); border: .5px solid #d6d6d6; z-index: 2; background: white; border-radius: 40px; width: 40px; top: -45px;}
      .backBtn{position: absolute; width: 45px;}
      .header .savedNavIcon{position: absolute; left:5px;}
    .footer{bottom: 0; padding: 7px; background: white; z-index: 2; border-top: 1px solid #d6d6d6; filter: drop-shadow(0px 1px 3px #d6d6d6);}
      .recovery{width: 30px; height: 30px;}
    .pageContent{max-width: 480px; height: 100%; position: relative; left: 50%; transform: translate(-50%); display: flex;flex-direction: column; overflow-y: scroll; background: white; top:0px;}
      .pageContent .pageSection{margin: 10px 10px 10px 10px;}
        .sectionHeader{font-size: 1.5em; margin-bottom: 10px;}


/*Add screen styles */
addScreen{z-index: 2;}
addScreen input{border:none;}
input:focus{outline: none;}

.titleInput{font-size: 1.3em;}

.dateInput{display: flex; justify-content: space-between;}
.flatpickr-input{background: none; font-family: 'Work Sans', sans-serif; font-size: 1em; width: 150px;}

.repeatListTitle{font-size: 1.3em;}
.repeatList {display: flex; flex-direction: row; flex-wrap: wrap; position: relative; transform: translateX(-50%); left: 50%; width: 300px;}
  .repeatItem {width: 76px; height: 34px; margin: 4px; text-align: center; line-height: 34px;}
  .btn {border: 1px solid #000; cursor: pointer; border-radius: 4px; padding: 7px;}
  .selected{background: #4D77BE; color: white;}

.navigation{display: flex; justify-content: space-between;}
  .exit,.add{width: 30px; height: 30px;}

.allDay{display: flex; justify-content: space-between; font-size:1.3em;}


/*Home screen styles*/
homeScreen{z-index: 1;}
homeScreen .pageContent{justify-content: start;}
.reminderList{display: flex; flex-direction: column;}
  .reminder{display: flex; padding: 5px; background: #e8eaed; border: 1px solid #d6d6d6; margin: 8px 0 8px 0; position: relative; left: 0px;}
    .leftSide{ display: flex; width: 15%; border-right: 1px solid;}
      .weekDay{align-self: center; margin: 0 5px 0 5px;}
    .rightSide{display: flex; width: 85%; justify-content: space-between; flex-wrap: wrap; margin: 0 5px 0 5px;}
      .title{width: 100%; font-size: 1.3em; margin-bottom: 5px;}
      .date{font-size: 1.1em;}
      .time{font-size: 1.1em;}
      .repeat{font-size: .7em; align-self: center;}

/*loading screen styles */
.loading{position: relative; top: 50%; left: 50%; transform: translate(-50%,-50%); width: 256px; height: 256px;}

/*recovery screen styles */
recoveryScreen {z-index: 2;}
recoveryScreen .pageSection{text-align: center;}
.uidHeader{font-size: 1.3em; margin: 5px;}
.uidInput{width:95%;}
.recoverBtn{background: #4D77BE; padding: 7px; width: fit-content; margin: 0px auto; border: 1px solid black;}


/*slider styles*/
/* The switch - the box around the slider */
.switch {position: relative; display: inline-block; width: 60px; height: 34px; -webkit-tap-highlight-color: transparent;}
/* Hide default HTML checkbox */
.switch input {opacity: 0; width: 0; height: 0;}
/* The slider */
.slider {position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #ccc; -webkit-transition: .4s; transition: .4s; border-radius: 15px;}
.slider:before {position: absolute; content: ""; height: 26px; width: 26px; left: 4px; bottom: 4px; background-color: white; -webkit-transition: .4s; transition: .4s; border-radius: 15px;}
input:checked + .slider {background-color: #4D77BE;}
input:focus + .slider { box-shadow: 0 0 1px #4D77BE;}
input:checked + .slider:before {-webkit-transform: translateX(26px); -ms-transform: translateX(26px); transform: translateX(26px);}


/*Animations*/
.slideIn{animation: slideIn .75s; animation-fill-mode: forwards;}
@keyframes slideIn {
  to {left: 0}
}
.slideOut{animation: slideOut .75s; animation-fill-mode: forwards;}
@keyframes slideOut {
  to {left: -480px;}
}

.slideUp{animation: slideUp 0.5s; animation-fill-mode: forwards;}
@keyframes slideUp {
  to {top: -45px;}
}


.navIn{animation: navIn 0.1s; animation-fill-mode: forwards;}
@keyframes navIn {
  from {transform: scale(0);}
  to {transform: scale(1);}
}

.navOut{animation: navOut 0.1s; animation-fill-mode: forwards;}
@keyframes navOut {
  from {opacity: 1;}
  to { opacity: 0;}
}


/*font styles*/
/* vietnamese */
@font-face {
  font-family: 'Work Sans';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(../assets/WorkSans-VariableFont_wght.ttf) format('woff2');
  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
}
/* latin-ext */
@font-face {
  font-family: 'Work Sans';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(../assets/WorkSans-VariableFont_wght.ttf) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Work Sans';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(../assets/WorkSans-VariableFont_wght.ttf) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

